# integration-python-onapsdk

./: .gitlab-ci.yml  .gitreview  .readthedocs.yaml  CHANGELOG.md  INFO.yaml  README.md  dev-requirements.txt  groups  project.config  requirements.txt  service-Vboxvnf-template.yml  setup.cfg  test-requirements.txt  tox.ini
docs/: conf.py  development.rst  requirements-docs.txt  tox.ini
integration_tests/: docker-compose.yml  local_urls.py  test_01_vendor.py  test_02_vsp.py  test_03_vf.py  test_04_service.py  test_05_cloud_infrastructure.py  test_06_customer.py  test_07_instantiation.py  test_08_cds.py  test_09_clamp.py  test_10_k8s.py  test_10_msb_k8s.py  test_11_ves.py  test_12_dmaap.py  urls.py
releases/: pypi-10.5.0-onapsdk.yaml  pypi-12.10.0-onapsdk.yaml  pypi-12.11.0-onapsdk.yaml  pypi-12.2.0-onapsdk.yaml  pypi-12.3.1-onapsdk.yaml  pypi-12.3.2-onapsdk.yaml  pypi-12.4.0-onapsdk.yaml  pypi-12.5.0-onapsdk.yaml  pypi-12.6.0-onapsdk.yaml  pypi-12.6.1-onapsdk.yaml  pypi-12.7.0-onapsdk.yaml  pypi-12.7.1-onapsdk.yaml  pypi-12.7.2-onapsdk.yaml  pypi-12.7.3-onapsdk.yaml  pypi-12.8.0-onapsdk.yaml  pypi-12.9.0-onapsdk.yaml  pypi-13.0.0-onapsdk.yaml  pypi-13.0.1-onapsdk.yaml  pypi-13.0.2-onapsdk.yaml  pypi-13.0.3-onapsdk.yaml  pypi-13.0.4-onapsdk.yaml  pypi-13.0.5-onapsdk.yaml  pypi-13.0.6-onapsdk.yaml  pypi-13.0.7-onapsdk.yaml  pypi-13.0.8-onapsdk.yaml  pypi-13.1.0-onapsdk.yaml  pypi-13.1.1-onapsdk.yaml  pypi-13.2.0-onapsdk.yaml  pypi-13.3.0-onapsdk.yaml  pypi-14.0.0-onapsdk.yaml  pypi-14.1.0-onapsdk.yaml  pypi-14.2.0-onapsdk.yaml  pypi-14.3.0-onapsdk.yaml  (+1 more)
(+282 files in other folders)
