# SPDX-License-Identifier: Apache-2.0
[metadata]
name = onapsdk
version = attr: src.onapsdk.version.__version__
description = SDK to use ONAP Programatically
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://gitlab.com/Orange-OpenSource/lfn/onap/python-onapsdk
author = Orange OpenSource
license = Apache 2.0
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8,<4
package_dir=
    =src
packages=find_namespace:
install_requires =
  requests[socks]==2.32.3
  jinja2==3.1.5
  simplejson==3.17.6
  oyaml==1.0
  pyOpenSSL==22.0.0
  jsonschema==4.4.0
  dacite==1.6.0
  more-itertools>=8.12.0
  kafka-python-ng==2.2.2
setup_requires =
  pytest-runner==5.2
tests_require =
  pytest==7.0.1
  pytest-cov==3.0.0
  requests-mock==1.9.3

[options.packages.find]
where=src

[options.package_data]
onapsdk = **/templates/*

[aliases]
test=pytest

[tool:pytest]
addopts =
  --verbose --doctest-modules --cov-fail-under=98
  --cov-report term-missing --cov=src/onapsdk --maxfail=1

testpaths = tests src
